--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2271,6 +2271,9 @@
 
 		.box.features .features-row {
 			border-top: solid 2px #e5e5e5;
+			/* border-left: solid 2px  #e5e5e5; */
+			/* border-right: solid 2px  #e5e5e5; */
+			/* border-bottom: solid 2px  #e5e5e5;; */
 			position: relative;
 		}
 
